# ml-spark-use-case

./: .gitignore  01_limpieza.ipynb  02_modelo.ipynb  03_visualizacion.ipynb  README.md  pyproject.toml
