[project]
name = "ml-spark-use-case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pyarrow>=21.0.0",
    "pyspark==3.4.4",
]
